# racer-editor

./: README.md  pyproject.toml
src/editor/: __init__.py
src/editor/core/: hermite.py  track.py  undo.py
src/editor/gui/: __main__.py  camera.py  menu.py  mouse.py  opensave.py  preview.py  shaders.py  trackglsl.py  view.py
src/editor/gui/shaders/: curve.frag  curve.vert  grid.frag  grid.vert  handle.frag  handle.vert
tests/test_core/: test_hermite.py  test_track.py  test_undo.py  test_watcher.py
